--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python files
 *.py[cod]
 
 # Object files
@@ -18,6 +19,8 @@
 *.out
 *.app
 
-# C extensions
-*.so
+# Backup files
+*.swp
 
+# Tar files
+*.tar*
